fix: color contrast errors

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -80,7 +80,7 @@ ul {
 }
 .btn-primary {
   padding: 1rem;
-  background-color: #0b46bd;
+  background-color: #4bb6e7;
 }
 .content-section {
   display: flex;
